# n-puzzle

./: .gitignore  CMakeLists.txt  Makefile  O3  README.md  npuzzle-gen.py  puzzle.txt  solver  solver.py
src/cpp/: Matrix.cpp  Matrix.hpp  Puzzle.cpp  Puzzle.hpp  Puzzle.tpp  Puzzle3.ipp  a.out  aStar.cpp  aStar.ipp  aStar.tpp  main.cpp  test.cpp
src/py/: MinHeap.py  Puzzle.py  __main__.py  a_star.py  search.py
